:feat/bestiary добавление фильтра по УО